# learning-ai

./: Golang-Backend-for-Hermes-AI-Agent.md  Ollama  Pompt-engeneering.md  README.md  about-openspec-and -loop-enginering  about-openspec-and -loop-enginering.md  agents-ai.md  claude Code Skills vs Plugins  golang-goenv.md  how-to-create-conda-virtual-env-for-RAG-lllama.md  how-to-implement-external-actions-any-llm-model.md  openspec-using.md
deploy-platforms/: Cloud-App-Deployment-Comparing-Prefect-summary.md  Cloud-App-Deployment-Comparing.md
prefect/: README-PREFECT-PROJ-STRU-1.md  README-PREFECT.md
prefect/my_vertical_ai_agent_project/: .env-example  .gitignore  agents.py  requirements.txt  run-flow.py  tools.py
prefect/my_vertical_ai_agent_project-1/: README-PREFECT-PROJ-STRU-2.md
prefect/my_vertical_ai_agent_project-1/customer-prefect-flows/: .env.example  .gitignore  .pre-commit-config.yaml  .~lock.pyproject.toml#  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
prefect/my_vertical_ai_agent_project-1/customer-prefect-flows/config/: settings.py
prefect/my_vertical_ai_agent_project-1/customer-prefect-flows/deployments/: .env.example  prefect_deployments.py
prefect/my_vertical_ai_agent_project-1/customer-prefect-flows/deployments/docker/: Dockerfile  docker-compose.yml
prefect/my_vertical_ai_agent_project-1/customer-prefect-flows/scripts/: deploy.py  setup.py  validate_migration.py
prefect/my_vertical_ai_agent_project-1/customer-prefect-flows/src/customer_flows/: __init__.py  cli.py
prefect/my_vertical_ai_agent_project-1/customer-prefect-flows/src/customer_flows/agents/: __init__.py  example_crew.py
prefect/my_vertical_ai_agent_project-1/customer-prefect-flows/src/customer_flows/chains/: __init__.py  example_chains.py
prefect/my_vertical_ai_agent_project-1/customer-prefect-flows/src/customer_flows/config/: __init__.py  settings.py
prefect/my_vertical_ai_agent_project-1/customer-prefect-flows/src/customer_flows/crewai_tools/: __init__.py
prefect/my_vertical_ai_agent_project-1/customer-prefect-flows/src/customer_flows/crewai_tools/analysis/: __init__.py
prefect/my_vertical_ai_agent_project-1/customer-prefect-flows/src/customer_flows/crewai_tools/communication/: __init__.py
prefect/my_vertical_ai_agent_project-1/customer-prefect-flows/src/customer_flows/crewai_tools/storage/: __init__.py
prefect/my_vertical_ai_agent_project-1/customer-prefect-flows/src/customer_flows/crewai_tools/web/: __init__.py
prefect/my_vertical_ai_agent_project-1/customer-prefect-flows/src/customer_flows/flows/: example_flow.py
prefect/my_vertical_ai_agent_project-1/customer-prefect-flows/src/customer_flows/tasks/: __init__.py  core_tasks.py  example_tasks.py
prefect/my_vertical_ai_agent_project-1/customer-prefect-flows/src/customer_flows/tools/: __init__.py  web_tools.py
prefect/my_vertical_ai_agent_project-1/customer-prefect-flows/src/customer_flows/utils/: logging.py
prefect/my_vertical_ai_agent_project-1/customer-prefect-flows/tests/: conftest.py
prefect/my_vertical_ai_agent_project-1/customer-prefect-flows/tests/integration/: test_flow_integration.py
prefect/my_vertical_ai_agent_project-1/customer-prefect-flows/tests/unit/: test_flows.py  test_tasks.py
